--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
+  background-color: blueviolet;
+  width: 100%;
+  height: 530px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.show {
+  /* background-color: black; */
+  width: 100%;
+  height: 530px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button-panel {
+  background-color: rgb(226, 164, 164);
+  width: 100%;
+  height: fit-content;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background-color: rgb(218, 221, 43);
+  width: 455px;
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red {
+  background-color: red;
+  width: 100%;
+  height: 530px;
+}
+
+.blue {
+  background-color: blue;
+  width: 100%;
+  height: 530px;
+}
+
+.brown {
+  background-color: brown;
+  width: 100%;
+  height: 530px;
 }
