--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,6 @@
   height: 530px;
 }
 
-.show {
-  /* background-color: black; */
-  width: 100%;
-  height: 530px;
-}
-
 .button-panel {
   background-color: rgb(226, 164, 164);
   width: 100%;
@@ -19,7 +13,7 @@
 }
 
 .button {
-  background-color: rgb(218, 221, 43);
+  background-color: rgb(99, 99, 93);
   width: 455px;
   height: 100px;
 }
@@ -38,6 +32,12 @@
 
 .brown {
   background-color: brown;
+  width: 100%;
+  height: 530px;
+}
+
+.black {
+  background-color: black;
   width: 100%;
   height: 530px;
 }
