Add className to give the nav a different text color

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,3 +6,15 @@
 	box-shadow: whitesmoke;
 	font-weight: bold;
 }
+
+.blue1 {
+	color: blue;
+}
+
+.red1 {
+	color: red;
+}
+
+.brown1 {
+	color: brown;
+}
